tests/paczka1/fuzzy1/22436489.err
Error in line 7: r0WMVlITsp S4 82,8
Error in line 2: LQinVa9fN4 S4 44,6
Error in line 10: r0WMVlITsp S837 5,9
Error in line 22: qLRQoqWF S4 -2,3
Error in line 20: qLRQoqWF S4 57,9
Error in line 28: lhmEfBiu S837 128,9
